--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,9 +3,10 @@
 {% block title %}{{user.first_name}} {{user.last_name}} Details{% endblock %}
 
 {% block content %}
-<img src="{{user.img_url}}">
+
 <h1>{{user.first_name}} {{user.last_name}}</h1>
-<form action="/users/{{user.id}}/edit-form">
+<img src="{{user.image_url}}">
+<form action="/users/{{user.id}}/edit">
     <button>Edit</button>
 </form>
 <form action="/delete">
