--- a/templates/edit-user-form.html
+++ b/templates/edit-user-form.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Edit a User</h1>
 
-<form action="/edit-user" method="POST">
+<form method="POST">
     <label for="first name">First Name: </label>
     <input id="first name"type="text" name="first_name">
     <label for="last name">Last Name: </label>
