--- a/templates/detail.html
+++ b/templates/detail.html
@@ -9,7 +9,7 @@
 <form action="/users/{{user.id}}/edit">
     <button>Edit</button>
 </form>
-<form action="/delete">
+<form action="/users/{{user.id}}/delete">
     <button>Delete</button>
 </form>
 {% endblock %}
