--- a/templates/edit-user-form.html
+++ b/templates/edit-user-form.html
@@ -6,12 +6,12 @@
 <h1>Edit a User</h1>
 
 <form method="POST">
-    <label for="first name">First Name: </label>
-    <input id="first name"type="text" name="first_name">
-    <label for="last name">Last Name: </label>
-    <input id="last name"type="text" name="last_name">
-    <label for="image url">Image Url: </label>
-    <input id= "image url"type="text" name="image_url">
+    <label for="first_name">First Name: </label>
+    <input id="first_name"type="text" name="first_name">
+    <label for="last_name">Last Name: </label>
+    <input id="last_name"type="text" name="last_name">
+    <label for="image_url">Image Url: </label>
+    <input id= "image_url"type="text" name="image_url">
     <button>Save</button>
 </form>
 <form action="/users/{{user.id}}">
